Index I think is finally done including mobile view to display everything correctly.
Worked on the nav bar more so it is now displaying more or less the way I want it to.

Blog has been revamped but still needs extra work to ensure that it looks good, still a bit off centre and the overall posts need styling and formating corretly still.

About page has some basic content, it will be quite a simple view overall so it doesn't need too much extra work on top of what I have done

--- a/AlexWilkinson/wwwroot/css/site.css
+++ b/AlexWilkinson/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 ﻿* {
-    color: lightslategrey;
+    color: rgb(153, 154, 156);
 }
 a:hover {
     color: #4196ea;
@@ -16,8 +16,17 @@ p {
     color: lightslategrey;
 }
 /*Navbar styling*/
+.user-detail-above-nav {
+    text-align: center;
+}
+.user-detail-above-nav a {
+    color: #4196ea;
+}
+.user-detail-above-nav a:hover {
+    color: lightslategrey;
+}
 .navbar-inverse {
-    margin-top: 50px;
+
     background-color: transparent;
     border: 0px;
     margin-bottom: 20px;
@@ -25,7 +34,7 @@ p {
 ul.nav a {
     text-decoration: none;
     background-color: transparent !important;
-    color: ##778899 !important;
+    color: #778899 !important;
     font-size: 22px;
 }
 
@@ -34,14 +43,6 @@ ul.nav a:hover {
     border-width: 0px;
     border-style: solid;
     background-color: transparent;
-    font-size: 21px;
-}
-#homepage-main-text{
-    margin-top: 200px;
-    padding-left: 20px;
-    display: block;
-    width: 40%;
-    color: rgb(153, 154, 156);
 }
 .navbar-brand {
     font-size: 30px;
@@ -49,20 +50,45 @@ ul.nav a:hover {
     color: #4196ea !important;
     font-family: 'Pacifico', cursive;
 }
-.navbar-brand:hover{
+
+.navbar-brand:hover {
     color: aliceblue !important;
 }
-
-.navbar .navbar-header{
-        height: 100px;
-}
-.highligher {
-    color: #4196ea;
+/*Homepage Style*/
+#homepage-main-text{
+    margin-top: 200px;
+    padding-left: 20px;
+    display: block;
+    width: 40%;
+    color: rgb(153, 154, 156);
 }
 #homepage-main-text h3 {
     font-family: 'Titillium Web', sans-serif;
     visibility: hidden;
 }
+/*Resumepage Style*/
+
+/*Blogpage Style*/
+.blog-search-bar{
+    padding-top: 30px;
+    text-align:right;
+}
+.main-blog-container{
+    margin: 10px 20px 40px 20px;
+}
+/*Portfoliopage Style*/
+/*Aboutpage Style*/
+#aboutpage-main-text {
+    display: block;
+    color: rgb(153, 154, 156);
+}
+
+
+
+.highligher {
+    color: #4196ea;
+}
+
 /*Pushing things away from the nav*/
 h2 {
     margin-top: 40px;
@@ -97,17 +123,83 @@ textarea {
 }
 
 /* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
+@media (max-width: 1000px) {
+    .collapsing, .in {
+        background-color: #f7f7f7;
     }
+
+    .collapsing ul li a, .in ul li a {
+        color: #555 !important;
+    }
+
+    .collapsing ul li a:hover, .in ul li a:hover {
+        color: #f1f1f1 !important;
+    }
+
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-left, .navbar-right {
+        float: none !important;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+
+    .navbar-nav > li {
+        float: none;
+    }
+
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .collapse.in {
+        display: block !important;
+    }
+    #homepage-main-text {
+        margin-top: 60px;
+        padding-left: 20px;
+        display: block;
+        width: 100%;
+        color: rgb(153, 154, 156);
+    }
+    footer {
+        margin: auto;
+        width: 100%;
+        position: relative;
+        bottom: 0;
+    }
+
 }
 
+/*Footer styling*/
 footer {
     margin: auto;
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom:0;
 }
 footer a {
